ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
======================================================================

* V1.22.7 -
- Platforms: Native display builds for RISC OS are now working again,
  for the first time since 1.21.17 (now my toolchain is working).

* V1.22.6 - 19 June 2020
- BASIC: Implemented BB4W/BBCSDL extension GET(x,y) and GET$(x,y)
- BASIC: Fixed TINT, both function and command as they were rather broken.
- System: Some subtle bugs fixed as a result of clang compiler warnings.
- System: Block attempts to free workspace memory that shouldn't be randomly
  freed.
- System: INKEY(-256) now returns &4D (M) for all builds. System specifics
  can be obtained from SYS "Brandy_Platform".
- System: OSBYTE &87 implemented for non-MODE7 screen modes. (MODE 7
  was previously implemented)
- System: Now builds on MacOS High Sierra and Catalina. Note, it requires
  the latest snapshot of SDL 1.2 from SDL's Mercurial repository.
- System: Bug fixes for *SAVE and *LOAD. Additionally, MODE 7 screens
  can now be *SAVEd and *LOADed.
- System/Display: Several bugs fixed, highlighted by Jan Vibe's graphical demos.
- Display: Some optimisations in the scaled blitting code.
- Display: Added a hugely optimised code path for scrolling, when no VDU28
  window is in place, and not MODE 7.
- Display: VDU23,7 implemented apart from movement option.
- Display: While 32K colour modes aren't directly implemented, instead of
  reporting an error when such a mode is requested, a 24bit colour mode is
  selected instead.
- Keyboard: Implemented OSBYTE 4, including function keys on cursor keys with
  *FX4,2. *FX4,1 makes cursor keys generate BBC Micro values.
- Keyboard: Try to fix some glitches around softkeys and the cursor keys.
- Keyboard: Rework INKEY delay as on Windows messages were sometimes just
  getting lost in the post.
- Keyboard/Mouse: *FX15 and *FX21 (x=0,9 only) implemented to flush buffers.
- Mouse: Mouse event queue implemented.